Details
-
Bug
-
Status: Resolved
-
Minor
-
Resolution: Fixed
-
1.8.0
Description
The rebalancer-related tests in kudu-admin-test sometimes gets wild and run for too long. That's observed in RELEASE builds at least:
ConcurrentRebalancersTest.TwoConcurrentRebalancers/1: test_main.cc:63] Maximum unit test time exceeded (900 sec)
TserverGoesDownDuringRebalancingTest.TserverDown/1: test_main.cc:63] Maximum unit test time exceeded (900 sec)